<resources>
    <string name="app_name">AnotherIPTV</string>
    <string name="dialog_title_remove_history">Remove from History</string>
    <string name="dialog_msg_remove_history">Are you sure you want to remove this item from watch history?</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_remove">Remove</string>
    <string name="action_delete">Delete</string>
    <string name="title_clear_all">Clear All</string>
    <string name="title_desc_clear">Are you sure want to delete all history?</string>
    <string name="dialog_title_remove_playlist">Delete Playlist</string>
    <string name="dialog_msg_remove_playlist">Are you sure you want to delete the playlist ...?</string>
    <string name="dialog_msg_remove_playlist2">This action cannot be undone</string>
    <string name="title_nav_history">History</string>
    <string name="title_nav_all">All</string>
    <string name="title_nav_setting">Settings</string>
    <string name="title_nav_live">Live</string>
    <string name="title_nav_movies">Movies</string>
    <string name="title_nav_series">Series</string>
    <string name="placeholder_channel_name">Channel Name</string>
    <string name="title_history">History</string>
    <string name="section_live_streams">Live Streams</string>
    <string name="title_xstream_playlist">XStream Code Playlist</string>
    <string name="subtitle_load_xstream">Easily connect with information from your IPTV provider</string>
    <string name="label_xstream_url">API URL</string>
    <string name="hint_xstream_name">http://example.com:8080</string>
    <string name="title_username_xstream">Username</string>
    <string name="hint_xstream_username">Enter your username</string>
    <string name="title_password_xstream">Password</string>
    <string name="hint_xstream_password">Enter your password</string>
    <string name="btn_save_playlist">Save Playlist</string>
    <string name="info_desc_xstream">All data is securely stored on your device</string>
    <string name="info_desc2_xstream">URL format should be like http://server:port</string>
    <string name="error_title_xstream">An error occurred</string>
    <string name="error_desc_xstream">Could not get a response from your IPTV provider, please check your information</string>
    <string name="title_live_xstream">Live Streams</string>
    <string name="category_name">PPV | UFC</string>
    <string name="viewAll_xstream">View All</string>
    <string name="title_movie_xstream">Movies</string>
    <string name="movie_category_name">2026 Movies</string>
    <string name="movie_viewAll_xstream">View All</string>
    <string name="title_series_xstream">Series</string>
    <string name="series_category_name">2026 Series</string>
    <string name="series_viewAll_xstream">View All</string>
    <string name="title_m3u_playlist">M3U Playlist</string>
    <string name="subtitle_load_m3u">Load IPTV channels with M3U playlist file or URL</string>
    <string name="label_playlist_name">Playlist Name</string>
    <string name="hint_playlist_name">M3U Playlist-1</string>
    <string name="label_source_type">Source Type</string>
    <string name="tab_url">URL</string>
    <string name="tab_file">File</string>
    <string name="label_m3u_url">M3U URL</string>
    <string name="hint_url">http://example.com/playlist.m3u</string>
    <string name="hint_file">Select M3U file (.m3u, m3u8)</string>
    <string name="btn_create_playlist">Create Playlist</string>
    <string name="info_title">Info</string>
    <string name="error_title">Error Occurred</string>
    <string name="error_desc_m3u">M3U Error</string>
    <string name="info_desc_m3u">All data is securely stored on your device.\nSupported formats: .m3u, .m3u8\nURL format: Must start with http:// or https://</string>
    <string name="text_error_url">Enter a valid URL format</string>
    <string name="title_create_new_playlist">Create New Playlist</string>
    <string name="title_select_playlist_type">Select Playlist Type</string>
    <string name="subtitle_choose_playlist_type">Choose the type of playlist you want to create</string>
    <string name="card_title_xtream">Xtream Codes</string>
    <string name="card_subtitle_xtream">Connect with API URL, Username, and Password</string>
    <string name="card_desc_xtream">Easily connect with information from your IPTV provider</string>
    <string name="card_title_m3u">M3U Playlist</string>
    <string name="card_subtitle_m3u">Add playlist with M3U file or URL</string>
    <string name="card_desc_m3u">Supports traditional M3U format files</string>
    <string name="info_secure_storage">Your playlist information is securely stored on your device.</string>
    <string name="title_my_playlists">My Playlists</string>
    <string name="empty_title_playlists">No Playlist Yet</string>
    <string name="empty_desc_playlists">Start by creating your first playlist.\nYou can add playlists in Xtream Code or M3U format.</string>
    <string name="btn_create_first_playlist">+ Create My First Playlist</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_loading_xstream">Another IPTV\nPlayer</string>
    <string name="desc_loading_xstream">Open Source IPTV Player</string>
    <string name="text_loading_live">Loading live channels</string>
    <string name="text_seasons">Seasons</string>
    <string name="text_trailer">Trailer</string>
    <string name="text_desc">Description</string>
    <string name="text_release_date">Release Date</string>
    <string name="text_genre">Genre</string>
    <string name="text_cast">Cast</string>
    <string name="text_epi">Episode Duration</string>
    <string name="text_cat_id">Category ID</string>
    <string name="text_series_id">Series ID</string>
    <string name="text_pre">Preparing series library</string>
    <string name="title_setting">Settings</string>
    <string name="title_playlist">Playlist List</string>
    <string name="title_gen">General Settings</string>
    <string name="refresh_content">Refresh Content</string>
    <string name="title_theme">Theme</string>
    <string name="player_setting">Player Settings</string>
    <string name="title_continue">Continue Playing in Background</string>
    <string name="title_keep_playing">Keep playing even when app is in background</string>
    <string name="title_sub_title">Subtitle Settings</string>
    <string name="title_hide_categories">Hide categories</string>
    <string name="text_connected">Connected</string>
    <string name="text_user_name">Username</string>
    <string name="desc_connected">Subscription: 343 Days</string>
    <string name="title_custome">Customize subtitle appearance</string>
    <string name="title_brightness">Brightness Gesture</string>
    <string name="desc_brightness">Control brightness by swiping vertically on left side</string>
    <string name="title_volume">Volume Gesture</string>
    <string name="desc_volume">Control volume by swiping vertically on the right side</string>
    <string name="title_seek">Seek Gesture</string>
    <string name="desc_seek">Seek by swiping horizontally</string>
    <string name="title_speed">Speed Up on Long Press</string>
    <string name="title_sub">Subscription Details</string>
    <string name="title_time">Time Remaining</string>
    <string name="title_server">Server Information</string>
    <string name="time_zone">Time Zone</string>
    <string name="server_message">Server Message</string>
    <string name="desc_sub">343 Days</string>
    <string name="text_active_connect">Active Connection</string>
    <string name="title_maximum">Maximum Connection</string>
    <string name="desc_speed">Speed up playback when long pressing</string>
    <string name="title_double_tap">Seek on Double Tap</string>
    <string name="desc_double_tap">Seek forward/backward by double tapping</string>
    <string name="title_about">About</string>
    <string name="title_app_version">App Version</string>
    <string name="default_app_version">1.3.0</string>
    <string name="title_github">Support on GitHub</string>
    <string name="desc_github">Contribute to the project on GitHub</string>
    <string name="title_playlist_info">Playlist Information</string>
    <string name="title_playlist_name">Playlist Name</string>
    <string name="default_playlist_name">M3U Playlist-1</string>
    <string name="title_server_url">Server URL</string>
    <string name="default_server_url">https://iptv-org.github.io/iptv/countries/vn.m3u</string>
    <string name="title_item_category">Category</string>
    <string name="text_channels">0 channels</string>
    <string name="delete">Delete</string>
    <string name="date">Today</string>
    <string name="text_select_all">Select All</string>
    <string name="text_deselect_all">Deselect All</string>
    <string name="bg_section_header">...</string>
    <string name="title_video_info">Video\nInformation</string>
    <string name="label_name">Name</string>
    <string name="label_content_type">Content Type</string>
    <string name="label_format">Format</string>
    <string name="label_rating">Rating</string>
    <string name="label_added_date">Added Date</string>
    <string name="label_stream_id">Stream ID</string>
    <string name="label_url">URL</string>
    <string name="default_dash">—</string>
    <string name="title_video_info_panel">Video\nInformation</string>
    <string name="label_epg_channel_id">EPG Channel ID</string>
    <string name="title_categories">Categories</string>
    <string name="text_loading_m3u">Loading M3U</string>
    <string name="title_settings_panel">Settings</string>
    <string name="title_video_track">Video Track</string>
    <string name="title_audio_track">Audio Track</string>
    <string name="title_subtitle_track">Subtitle Track</string>
    <string name="label_auto">Auto</string>
    <string name="label_disabled">Disabled</string>
    <string name="back">Back</string>
    <string name="rating">Rating</string>
    <string name="info">Info</string>
    <string name="added_date">Added Date</string>
    <string name="trailer">Trailer</string>
    <string name="start_watching">Start Watching</string>
    <string name="sub_title">Subtitle Settings</string>
    <string name="text_reset">Reset</string>
    <string name="text_preview">Preview</string>
    <string name="sample_subtitle_text">Sample subtitle text\nIt will look like this</string>
    <string name="title_font_settings">Font Settings</string>
    <string name="label_font_size">Font Size</string>
    <string name="label_line_height">Line Height</string>
    <string name="label_letter_spacing">Letter Spacing</string>
    <string name="label_word_spacing">Word Spacing</string>
    <string name="label_padding">Padding</string>
    <string name="title_color_settings">Color Settings</string>
    <string name="label_text_color">Text Color</string>
    <string name="label_background_color">Background Color</string>
    <string name="title_style_settings">Style Settings</string>
    <string name="label_font_weight">Font Weight</string>
    <string name="label_text_alignment">Text Alignment</string>
    <string name="theme_default">Default</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="label_app_language">App Language</string>
</resources>