<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history"
        android:title="@string/title_nav_history" />

    <item
        android:id="@+id/nav_live"
        android:icon="@drawable/ic_tv1"
        android:title="@string/title_nav_live" />

    <item
        android:id="@+id/nav_movie"
        android:icon="@drawable/ic_movie"
        android:title="@string/title_nav_movies" />

    <item
        android:id="@+id/nav_series"
        android:icon="@drawable/ic_tv2"
        android:title="@string/title_nav_series" />


    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_nav_setting" />

</menu>