<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_dialog_rounded"
    android:orientation="vertical"
    android:padding="@dimen/spacing_xlarge">
    <TextView
        android:id="@+id/tvDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_title_remove_playlist"
        android:textAppearance="?attr/textAppearanceTitleLarge" />

    <TextView
        android:id="@+id/tvDialogMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:lineSpacingExtra="4dp"
        android:text="@string/dialog_msg_remove_playlist"
        android:textColor="@color/text_secondary"
        android:textAppearance="?attr/textAppearanceBodyLarge" />

    <TextView
        android:id="@+id/tvDialogMessage2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:lineSpacingExtra="4dp"
        android:text="@string/dialog_msg_remove_playlist2"
        android:textColor="@color/text_secondary"
        android:textAppearance="?attr/textAppearanceBodyLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="end"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            style="@style/DialogTextButton" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_cancel"
            android:textColor="#3C669A" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRemove"
            style="@style/DialogTextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            app:cornerRadius="10dp"
            app:backgroundTint="@color/btn_delete"
            android:text="@string/action_delete"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>